sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                 |
| ----------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [administratorsCreateSample.ts][administratorscreatesample]                                                 | Creates a new server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/AdministratorAdd.json                                                                                                                                                                                  |
| [administratorsDeleteSample.ts][administratorsdeletesample]                                                 | Deletes an Active Directory Administrator associated with the server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/AdministratorDelete.json                                                                                                                               |
| [administratorsGetSample.ts][administratorsgetsample]                                                       | Gets information about a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/AdministratorGet.json                                                                                                                                                                       |
| [administratorsListByServerSample.ts][administratorslistbyserversample]                                     | List all the AAD administrators for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/AdministratorsListByServer.json                                                                                                                                          |
| [backupsCreateSample.ts][backupscreatesample]                                                               | Create a specific backup for PostgreSQL flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/BackupCreate.json                                                                                                                                                   |
| [backupsDeleteSample.ts][backupsdeletesample]                                                               | Deletes a specific backup. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/BackupDelete.json                                                                                                                                                                                 |
| [backupsGetSample.ts][backupsgetsample]                                                                     | Get specific backup for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/BackupGet.json                                                                                                                                                                       |
| [backupsListByServerSample.ts][backupslistbyserversample]                                                   | List all the backups for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/BackupListByServer.json                                                                                                                                                             |
| [checkMigrationNameAvailabilitySample.ts][checkmigrationnameavailabilitysample]                             | This method checks whether a proposed migration name is valid and available. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/CheckMigrationNameAvailability.json                                                                                                             |
| [checkNameAvailabilityExecuteSample.ts][checknameavailabilityexecutesample]                                 | Check the availability of name for resource x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/CheckNameAvailability.json                                                                                                                                                       |
| [checkNameAvailabilityWithLocationExecuteSample.ts][checknameavailabilitywithlocationexecutesample]         | Check the availability of name for resource x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/CheckNameAvailabilityLocationBased.json                                                                                                                                          |
| [configurationsGetSample.ts][configurationsgetsample]                                                       | Gets information about a configuration of server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ConfigurationGet.json                                                                                                                                                      |
| [configurationsListByServerSample.ts][configurationslistbyserversample]                                     | List all the configurations in a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ConfigurationListByServer.json                                                                                                                                                |
| [configurationsPutSample.ts][configurationsputsample]                                                       | Updates a configuration of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ConfigurationUpdate.json                                                                                                                                                                |
| [configurationsUpdateSample.ts][configurationsupdatesample]                                                 | Updates a configuration of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ConfigurationUpdate.json                                                                                                                                                                |
| [databasesCreateSample.ts][databasescreatesample]                                                           | Creates a new database or updates an existing database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/DatabaseCreate.json                                                                                                                                                  |
| [databasesDeleteSample.ts][databasesdeletesample]                                                           | Deletes a database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/DatabaseDelete.json                                                                                                                                                                                      |
| [databasesGetSample.ts][databasesgetsample]                                                                 | Gets information about a database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/DatabaseGet.json                                                                                                                                                                          |
| [databasesListByServerSample.ts][databaseslistbyserversample]                                               | List all the databases in a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/DatabasesListByServer.json                                                                                                                                                         |
| [firewallRulesCreateOrUpdateSample.ts][firewallrulescreateorupdatesample]                                   | Creates a new firewall rule or updates an existing firewall rule. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/FirewallRuleCreate.json                                                                                                                                    |
| [firewallRulesDeleteSample.ts][firewallrulesdeletesample]                                                   | Deletes a PostgreSQL server firewall rule. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/FirewallRuleDelete.json                                                                                                                                                           |
| [firewallRulesGetSample.ts][firewallrulesgetsample]                                                         | List all the firewall rules in a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/FirewallRuleGet.json                                                                                                                                                          |
| [firewallRulesListByServerSample.ts][firewallruleslistbyserversample]                                       | List all the firewall rules in a given PostgreSQL server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/FirewallRuleListByServer.json                                                                                                                                      |
| [flexibleServerStartLtrBackupSample.ts][flexibleserverstartltrbackupsample]                                 | Start the Long Term Retention Backup operation x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/LongTermRetentionBackup.json                                                                                                                                                  |
| [flexibleServerTriggerLtrPreBackupSample.ts][flexibleservertriggerltrprebackupsample]                       | PreBackup operation performs all the checks that are needed for the subsequent long term retention backup operation to succeed. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/LongTermRetentionPreBackup.json                                                              |
| [getPrivateDnsZoneSuffixExecuteSample.ts][getprivatednszonesuffixexecutesample]                             | Get private DNS zone suffix in the cloud x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/GetPrivateDnsZoneSuffix.json                                                                                                                                                        |
| [locationBasedCapabilitiesExecuteSample.ts][locationbasedcapabilitiesexecutesample]                         | Get capabilities at specified location in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/CapabilitiesByLocation.json                                                                                                                                  |
| [logFilesListByServerSample.ts][logfileslistbyserversample]                                                 | List all the server log files in a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/LogFilesListByServer.json                                                                                                                                                   |
| [ltrBackupOperationsGetSample.ts][ltrbackupoperationsgetsample]                                             | Gets the result of the give long term retention backup operation for the flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/LongTermRetentionOperationGet.json                                                                                                 |
| [ltrBackupOperationsListByServerSample.ts][ltrbackupoperationslistbyserversample]                           | Gets the result of the give long term retention backup operations for the flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/LongTermRetentionOperationListByServer.json                                                                                       |
| [migrationsCreateSample.ts][migrationscreatesample]                                                         | Creates a new migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/Migrations_Create_Other_SourceTypes_Validate_Migrate.json                                                                                                                                           |
| [migrationsDeleteSample.ts][migrationsdeletesample]                                                         | Deletes a migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/Migrations_Delete.json                                                                                                                                                                                  |
| [migrationsGetSample.ts][migrationsgetsample]                                                               | Gets details of a migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/Migrations_Get.json                                                                                                                                                                             |
| [migrationsListByTargetServerSample.ts][migrationslistbytargetserversample]                                 | List all the migrations on a given target server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/Migrations_ListByTargetServer.json                                                                                                                                         |
| [migrationsUpdateSample.ts][migrationsupdatesample]                                                         | Updates an existing migration. The request body can contain one to many of the mutable properties present in the migration definition. Certain property updates initiate migration state transitions. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/Migrations_Cancel.json |
| [operationsListSample.ts][operationslistsample]                                                             | Lists all of the available REST API operations. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/OperationList.json                                                                                                                                                           |
| [privateEndpointConnectionDeleteSample.ts][privateendpointconnectiondeletesample]                           | Deletes a private endpoint connection with a given name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/PrivateEndpointConnectionDelete.json                                                                                                                                |
| [privateEndpointConnectionUpdateSample.ts][privateendpointconnectionupdatesample]                           | Approve or reject a private endpoint connection with a given name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/PrivateEndpointConnectionUpdate.json                                                                                                                      |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                               | Gets a private endpoint connection. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/PrivateEndpointConnectionGet.json                                                                                                                                                        |
| [privateEndpointConnectionsListByServerSample.ts][privateendpointconnectionslistbyserversample]             | Gets all private endpoint connections on a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/PrivateEndpointConnectionList.json                                                                                                                                        |
| [privateLinkResourcesGetSample.ts][privatelinkresourcesgetsample]                                           | Gets a private link resource for PostgreSQL server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/PrivateLinkResourcesGet.json                                                                                                                                             |
| [privateLinkResourcesListByServerSample.ts][privatelinkresourceslistbyserversample]                         | Gets the private link resources for PostgreSQL server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/PrivateLinkResourcesList.json                                                                                                                                         |
| [quotaUsagesListSample.ts][quotausageslistsample]                                                           | Get quota usages at specified location in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2023-12-01-preview/examples/QuotaUsagesForFlexibleServers.json                                                                                                                  |
| [replicasListByServerSample.ts][replicaslistbyserversample]                                                 | List all the replicas for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ReplicasListByServer.json                                                                                                                                                          |
| [serverCapabilitiesListSample.ts][servercapabilitieslistsample]                                             | Get capabilities for a flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerCapabilities.json                                                                                                                                                              |
| [serverThreatProtectionSettingsCreateOrUpdateSample.ts][serverthreatprotectionsettingscreateorupdatesample] | Creates or updates a server's Advanced Threat Protection settings. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerThreatProtectionSettingsCreateOrUpdate.json                                                                                                         |
| [serverThreatProtectionSettingsGetSample.ts][serverthreatprotectionsettingsgetsample]                       | Get a server's Advanced Threat Protection settings. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerThreatProtectionSettingsGet.json                                                                                                                                   |
| [serverThreatProtectionSettingsListByServerSample.ts][serverthreatprotectionsettingslistbyserversample]     | Get a list of server's Threat Protection state. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerThreatProtectionSettingsListByServer.json                                                                                                                              |
| [serversCreateSample.ts][serverscreatesample]                                                               | Creates a new server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerCreateGeoRestoreWithDataEncryptionEnabled.json                                                                                                                                                   |
| [serversDeleteSample.ts][serversdeletesample]                                                               | Deletes a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerDelete.json                                                                                                                                                                                          |
| [serversGetSample.ts][serversgetsample]                                                                     | Gets information about a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerGet.json                                                                                                                                                                              |
| [serversListByResourceGroupSample.ts][serverslistbyresourcegroupsample]                                     | List all the servers in a given resource group. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerListByResourceGroup.json                                                                                                                                               |
| [serversListSample.ts][serverslistsample]                                                                   | List all the servers in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerList.json                                                                                                                                                                |
| [serversRestartSample.ts][serversrestartsample]                                                             | Restarts a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerRestart.json                                                                                                                                                                                        |
| [serversStartSample.ts][serversstartsample]                                                                 | Starts a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerStart.json                                                                                                                                                                                            |
| [serversStopSample.ts][serversstopsample]                                                                   | Stops a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/ServerStop.json                                                                                                                                                                                              |
| [serversUpdateSample.ts][serversupdatesample]                                                               | Updates an existing server. The request body can contain one to many of the properties present in the normal server definition. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/PromoteReplicaAsForcedStandaloneServer.json                                                  |
| [virtualEndpointsCreateSample.ts][virtualendpointscreatesample]                                             | Creates a new virtual endpoint for PostgreSQL flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/VirtualEndpointCreate.json                                                                                                                                    |
| [virtualEndpointsDeleteSample.ts][virtualendpointsdeletesample]                                             | Deletes a virtual endpoint. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/VirtualEndpointDelete.json                                                                                                                                                                       |
| [virtualEndpointsGetSample.ts][virtualendpointsgetsample]                                                   | Gets information about a virtual endpoint. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/VirtualEndpointsGet.json                                                                                                                                                          |
| [virtualEndpointsListByServerSample.ts][virtualendpointslistbyserversample]                                 | List all the servers in a given resource group. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/VirtualEndpointsListByServer.json                                                                                                                                            |
| [virtualEndpointsUpdateSample.ts][virtualendpointsupdatesample]                                             | Updates an existing virtual endpoint. The request body can contain one to many of the properties present in the normal virtual endpoint definition. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/VirtualEndpointUpdate.json                                               |
| [virtualNetworkSubnetUsageExecuteSample.ts][virtualnetworksubnetusageexecutesample]                         | Get virtual network subnet usage for a given vNet resource id. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2024-08-01/examples/VirtualNetworkSubnetUsage.json                                                                                                                                |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/administratorsCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env POSTGRESQL_SUBSCRIPTION_ID="<postgresql subscription id>" POSTGRESQL_RESOURCE_GROUP="<postgresql resource group>" node dist/administratorsCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[administratorscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/administratorsCreateSample.ts
[administratorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/administratorsDeleteSample.ts
[administratorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/administratorsGetSample.ts
[administratorslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/administratorsListByServerSample.ts
[backupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/backupsCreateSample.ts
[backupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/backupsDeleteSample.ts
[backupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/backupsGetSample.ts
[backupslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/backupsListByServerSample.ts
[checkmigrationnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/checkMigrationNameAvailabilitySample.ts
[checknameavailabilityexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/checkNameAvailabilityExecuteSample.ts
[checknameavailabilitywithlocationexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/checkNameAvailabilityWithLocationExecuteSample.ts
[configurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/configurationsGetSample.ts
[configurationslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/configurationsListByServerSample.ts
[configurationsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/configurationsPutSample.ts
[configurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/configurationsUpdateSample.ts
[databasescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/databasesCreateSample.ts
[databasesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/databasesDeleteSample.ts
[databasesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/databasesGetSample.ts
[databaseslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/databasesListByServerSample.ts
[firewallrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/firewallRulesCreateOrUpdateSample.ts
[firewallrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/firewallRulesDeleteSample.ts
[firewallrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/firewallRulesGetSample.ts
[firewallruleslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/firewallRulesListByServerSample.ts
[flexibleserverstartltrbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/flexibleServerStartLtrBackupSample.ts
[flexibleservertriggerltrprebackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/flexibleServerTriggerLtrPreBackupSample.ts
[getprivatednszonesuffixexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/getPrivateDnsZoneSuffixExecuteSample.ts
[locationbasedcapabilitiesexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/locationBasedCapabilitiesExecuteSample.ts
[logfileslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/logFilesListByServerSample.ts
[ltrbackupoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/ltrBackupOperationsGetSample.ts
[ltrbackupoperationslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/ltrBackupOperationsListByServerSample.ts
[migrationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/migrationsCreateSample.ts
[migrationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/migrationsDeleteSample.ts
[migrationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/migrationsGetSample.ts
[migrationslistbytargetserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/migrationsListByTargetServerSample.ts
[migrationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/migrationsUpdateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/operationsListSample.ts
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/privateEndpointConnectionDeleteSample.ts
[privateendpointconnectionupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/privateEndpointConnectionUpdateSample.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/privateEndpointConnectionsListByServerSample.ts
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/privateLinkResourcesGetSample.ts
[privatelinkresourceslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/privateLinkResourcesListByServerSample.ts
[quotausageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/quotaUsagesListSample.ts
[replicaslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/replicasListByServerSample.ts
[servercapabilitieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serverCapabilitiesListSample.ts
[serverthreatprotectionsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serverThreatProtectionSettingsCreateOrUpdateSample.ts
[serverthreatprotectionsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serverThreatProtectionSettingsGetSample.ts
[serverthreatprotectionsettingslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serverThreatProtectionSettingsListByServerSample.ts
[serverscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversCreateSample.ts
[serversdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversDeleteSample.ts
[serversgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversGetSample.ts
[serverslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversListByResourceGroupSample.ts
[serverslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversListSample.ts
[serversrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversRestartSample.ts
[serversstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversStartSample.ts
[serversstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversStopSample.ts
[serversupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/serversUpdateSample.ts
[virtualendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/virtualEndpointsCreateSample.ts
[virtualendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/virtualEndpointsDeleteSample.ts
[virtualendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/virtualEndpointsGetSample.ts
[virtualendpointslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/virtualEndpointsListByServerSample.ts
[virtualendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/virtualEndpointsUpdateSample.ts
[virtualnetworksubnetusageexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v8/typescript/src/virtualNetworkSubnetUsageExecuteSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-postgresql-flexible?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/postgresql/arm-postgresql-flexible/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
